# prettyconfi

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/burger/: app.py  cli_demo.py  schema.toml
examples/burger/templates/: index.html
examples/simple/: schema.toml
src/prettyconfi/: __init__.py  cli.py  composer.py  output.py  runner.py  schema.py  types.py  web.py
src/prettyconfig/: __init__.py  cli.py  composer.py  output.py  runner.py  schema.py  types.py  web.py
tests/: test_composer.py  test_output.py  test_runner.py  test_schema.py  test_web.py
tests/fixtures/: base.toml  module_a.toml  module_b.toml
