[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prettyconfi"
version = "0.1.3"
description = "Schema-driven configuration wizard for CLI and web"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["configuration", "wizard", "cli", "schema", "forms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
cli = ["questionary>=2.0"]
all = ["questionary>=2.0"]

[project.urls]
Homepage = "https://github.com/safrano9999/prettyconfi"

[tool.hatch.build.targets.wheel]
packages = ["src/prettyconfig", "src/prettyconfi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
